syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.bluez";
option java_outer_classname = "GrpcBluezProto";

package grpc_bluez;

message SimpleReply {
    bool result = 1;
}

message SimplePowerResetRequest {}

message SimpleConnectRequest {
    string address = 1;
}

message SimpleDisconnectRequest {
    string address = 1;
}

message SimpleRemoveRequest {
    string address = 1;
}

enum MediaProfile {
    MEDIA_PROFILE_A2DP = 0;
    MEDIA_PROFILE_HFP = 1;
}

message SimplePlayMediaRequest {
    string address = 1;
    bool play = 3;
    message PlayConfig {
        MediaProfile profile = 1;
        string media = 2;
        int32 timeout = 3;
    }
}

message SimpleCommandRequest {
    string address = 1;
    bytes cmd = 2;
}

service SimpleBluetoothInterface{
    rpc SimpleRemove(SimpleRemoveRequest) returns (SimpleReply) {}
    rpc SimplePowerReset(SimplePowerResetRequest) returns (SimpleReply) {}
    rpc SimpleConnect(SimpleConnectRequest) returns (SimpleReply) {}
    rpc SimpleDisconnect(SimpleDisconnectRequest) returns (SimpleReply) {}
    rpc SimplePlayMedia(SimplePlayMediaRequest) returns (SimpleReply) {}
    rpc SimpleCommand(SimpleCommandRequest) returns (SimpleReply) {}
}

// service BluetoothInterface {
//     rpc Connect(ConnectRequest) returns (ConnectReply) {}
//     rpc Disconnect(DisconnectRequest) returns (DisconnectReply) {}
//     rpc Pair(PairRequest) returns (PairReply) {}
//     rpc Power(PowerRequest) returns (PowerReply) {}
//     rpc Scan(ScanRequest) returns (ScanReply) {}
//     rpc Remove(RemoveRequest) returns (RemoveReply) {}
//     rpc Trust(TrustRequest) returns (TrustReply) {}
//     rpc Untrust(UntrustRequest) returns (UntrustReply) {}
// }
